# Group7FinalProject

./: Analysis.cpp  Analysis.h  CMakeLists.txt  Capacitor.cpp  Capacitor.h  Circuit.h  EWork.cpp  Element.cpp  Element.h  ISource.cpp  ISource.h  Inductor.cpp  Inductor.h  JuniorWork.cpp  Load.cpp  Load.h  Node.cpp  Node.h  README.txt  Resistor.cpp  Resistor.h  Source.cpp  Source.h  VSource.cpp  VSource.h  helperFunctions.cpp  helperFunctions.h  main.cpp  noParallelOrSeries.h
